# bazel-chisel-verilator-openroad-demo

./: .bazelproject  .bazelrc  .clangd  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  generate.bzl  maven_install.json  pyrightconfig.json  requirements.in  requirements_lock.txt
.bazel_output_base/: failure_detail.rawproto  install  java.log.santiego-blade-14.santiego.log.java.20260107-142120.145596  javalog.properties  lock
.bazel_output_base/server/: cmdline  jvm.out  server.starttime
.github/workflows/: ci.yaml
cpp/verilator_tests/: BUILD  counter.cc
eda/: BUILD
eda/SimdDotProduct/: BUILD  constraints.sdc  results.tcl
eda/dse/: .gitignore  BUILD  README.md  bazel_builder.py  dse_config.py  dse_runner.py  optimization.py  visualization.py
eda/dse/SimdDotProduct/: BUILD  README.md  run_simd_dse.py  simd_dse_config.py
hdl/chisel/: BUILD
hdl/chisel/src/SimdDotProduct/: BUILD  SimdDotProduct.scala
hdl/chisel/src/bazelapp/: BUILD  BazelApp.scala
hdl/chisel/src/checker/: BUILD  checker.scala
hdl/chisel/src/counter/: BUILD  counter.scala
rules/: BUILD  generate.bzl  rules.bzl  settings.bzl
