"""A demo of Chisel+Verilator+OpenROAD workflow"""

module(
    name = "chisel-verilator-openroad-demo",
)

# Use pre-built protoc to avoid compiling it from source every time
# This significantly speeds up BSP imports and builds
# See: https://blog.aspect.build/never-compile-protoc-again
bazel_dep(name = "toolchains_protoc", version = "0.6.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_verilator", version = "0.1.0")
bazel_dep(name = "verilator", version = "5.036.bcr.3")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_chisel", version = "0.1.0")

# Configure Scala version to match bazel-orfs
scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "2.13.17")
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
scala_deps.scalatest()  # needed by chisel_test (scala_test toolchain)
use_repo(
    scala_deps,
    "io_bazel_rules_scala_scala_compiler",
    "io_bazel_rules_scala_scala_library",
    "io_bazel_rules_scala_scala_reflect",
    "io_bazel_rules_scala_scalactic",
    "io_bazel_rules_scala_scalatest",
    "io_bazel_rules_scala_scalatest_compatible",
    "io_bazel_rules_scala_scalatest_core",
    "io_bazel_rules_scala_scalatest_diagrams",
    "io_bazel_rules_scala_scalatest_featurespec",
    "io_bazel_rules_scala_scalatest_flatspec",
    "io_bazel_rules_scala_scalatest_freespec",
    "io_bazel_rules_scala_scalatest_funspec",
    "io_bazel_rules_scala_scalatest_funsuite",
    "io_bazel_rules_scala_scalatest_matchers_core",
    "io_bazel_rules_scala_scalatest_mustmatchers",
    "io_bazel_rules_scala_scalatest_propspec",
    "io_bazel_rules_scala_scalatest_refspec",
    "io_bazel_rules_scala_scalatest_shouldmatchers",
    "io_bazel_rules_scala_scalatest_wordspec",
    "rules_scala_toolchains",
)

# Register custom Scala toolchain with SemanticDB enabled
register_toolchains("//:semanticdb_toolchain")

## Fix the compiler version and avoid any local compiler
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "20.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
)

bazel_dep(
    name = "rules_python",
    version = "1.6.3",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    # run `bazel run //:requirements.update` to update lock file
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "80344dd2b03c7aead962d988ab6b82bc3d7d03f2",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")

# To bump version, run: bazelisk run @bazel-orfs//:bump
orfs.default(
    # Official image https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:26Q1-172-gc5b07be00",
    sha256 = "fff8b842535d6a45066b67b450cefc0f7a4236708aa3429469c4da243670ff14",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")

# Chisel dependencies (creates @chisel_maven)
chisel = use_extension("@rules_chisel//chisel:extensions.bzl", "chisel")
chisel.toolchain(
    chisel_version = "7.2.0",
    firtool_resolver_version = "2.0.1",  # choose a known compatible resolver for your Chisel release
    scala_version = "2.13.17",  # should match rules_scala's scala_version
)
use_repo(chisel, "chisel_maven")

# Hedron's Compile Commands Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# Buildifier Prebuilt
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)

# Register pre-built protoc toolchain to avoid compiling from source
# IMPORTANT: This must be configured AFTER all other dependencies
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain()
use_repo(protoc, "toolchains_protoc_hub")

register_toolchains("@toolchains_protoc_hub//:all")
